// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadlineTransformationUtils applyDrillableItems should enable drilling of the both items (primary, secondary) 1`] = `
Object {
  "primaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
  "secondaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should enable drilling of the primary item identified by the drillable item identifier 1`] = `
Object {
  "primaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should enable drilling of the primary item identified by the drillable item uri 1`] = `
Object {
  "primaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should enable drilling of the secondary item identified by the drillable item identifier 1`] = `
Object {
  "secondaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should enable drilling of the secondary item identified by the drillable item uri 1`] = `
Object {
  "secondaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should reset drilling state of every item when drillable items does not match any header item 1`] = `
Object {
  "primaryItem": Object {
    "isDrillable": false,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils applyDrillableItems should treat provided data object as immutable 1`] = `
Object {
  "primaryItem": Object {
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils buildDrillEventData should build drill event data from execution for secondary value 1`] = `
Object {
  "element": "secondaryValue",
  "intersection": Array [
    Object {
      "header": Object {
        "measureHeaderItem": Object {
          "format": "#,##0.00",
          "identifier": "afSEwRwdbMeQ",
          "localIdentifier": "wonMetric",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1284",
          },
          "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1284",
        },
      },
    },
  ],
  "type": "headline",
  "value": "42470571.16",
}
`;

exports[`HeadlineTransformationUtils buildDrillEventData should build expected drill event data from execution request made with metric identifier 1`] = `
Object {
  "element": "primaryValue",
  "intersection": Array [
    Object {
      "header": Object {
        "measureHeaderItem": Object {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "Lost",
          "ref": Object {
            "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1283",
          },
          "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1283",
        },
      },
    },
  ],
  "type": "headline",
  "value": "9011389.956",
}
`;

exports[`HeadlineTransformationUtils buildDrillEventData should build expected drill event data from execution request made with metric uri 1`] = `
Object {
  "element": "primaryValue",
  "intersection": Array [
    Object {
      "header": Object {
        "measureHeaderItem": Object {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "Lost",
          "ref": Object {
            "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1283",
          },
          "uri": "/gdc/md/d20eyb3wfs0xe5l0lfscdnrnyhq1t42q/obj/1283",
        },
      },
    },
  ],
  "type": "headline",
  "value": "9011389.956",
}
`;

exports[`HeadlineTransformationUtils getData should set -100 for tertiary value when primary value is 0 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "0",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "42470571.16",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "-100",
  },
}
`;

exports[`HeadlineTransformationUtils getData should set 0 for tertiary value when both primary & secondary are the same values except 0 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "100",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "100",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "0",
  },
}
`;

exports[`HeadlineTransformationUtils getData should set null for tertiary value when both primary & secondary values are 0 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "0",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "0",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils getData should set null for tertiary value when both primary & secondary values are null 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": null,
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": null,
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils getData should set null for tertiary value when primary value is null 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": null,
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "42470571.16",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils getData should set null for tertiary value when secondary value is 0 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "0",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils getData should set null for tertiary value when secondary value is null 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": null,
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils getData should set primary item data from the execution 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
}
`;

exports[`HeadlineTransformationUtils getData should set primary, secondary and tertiary item data from the execution 1`] = `
Object {
  "primaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
  "secondaryItem": Object {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "42470571.16",
  },
  "tertiaryItem": Object {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "-78.78203727929332",
  },
}
`;
